templates/standalone_adc/standalone-adc-vpx.template
AWSTemplateFormatVersion: 2010-09-09

Description: >-
  Launches required number of Citrix ADCs. By default Customer Licensed (BYOL) ADC will be launched
Parameters:
  pCitrixADCImageID:
    Type: String
    Default: ""
    Description: >-
      AMI ID of Citrix ADC to be provisioned. If left empty, "Citrix ADC VPX - Customer Licensed Version 13.0-52.24 (https://aws.amazon.com/marketplace/pp/B00AA01BOE)" is provisioned by default
  pVpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  pSSHCidrIp:
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can SSH to the EC2 instance (port: 22)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTP to the EC2 instance (port: 80)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pHTTPSCidrIp:
    Default: 0.0.0.0/0
    Type: String
    MinLength: 9
    MaxLength: 18
    Description: "The IP address range that can HTTPS to the EC2 instance (port: 443)."
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  pKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
  pInstanceCount:
    Description: Please ensure enough unallocated EIPs. Each ADC requires 2 EIPs
    Type: Number
    Default: 1
    AllowedValues:
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
      - 10
  # pIsPublicIPRequired:
  #   Type: String
  #   Description: If Yes, please make sure enough EIPs to be free to allocate. One ADC will need 2 EIPs
  #   Default: !!str No
  #   AllowedValues:
  #     - !!str Yes
  #     - !!str No
  pManagementSubnet:
    Type: "AWS::EC2::Subnet::Id"
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Management IP. 
      IMP. -> The CIDR should be different that that of VPC.
  pClientSubnet:
    Type: "AWS::EC2::Subnet::Id"
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Client side
  pServerSubnet:
    Type: "AWS::EC2::Subnet::Id"
    Description: >-
      SubnetId of an existing subnet in your Virtual Private Cloud (VPC)
      dedicated for Server side.
  pInstanceType:
    Default: m4.xlarge
    ConstraintDescription: Must be a valid EC2 instance type.
    Type: String
    Description: Type of Netscalar instance
    AllowedValues:
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
  pTenancyType:
    Default: default
    Type: String
    Description: Instance tenancy default or dedicated
    AllowedValues:
      - default
      - dedicated

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Citrix ADC Image
        Parameters:
          - pCitrixADCImageID
      - Label:
          default: Virtual Private Network Configuration
        Parameters:
          - pVpcId
          - pSSHCidrIp
          - pHTTPCidrIp
          - pHTTPSCidrIp
          - pKeyName
      - Label:
          default: ADC Configuration Details
        Parameters:
          - pManagementSubnet
          - pClientSubnet
          - pServerSubnet
          - pInstanceCount
          # - pIsPublicIPRequired

    ParameterLabels:
      pCitrixADCImageID:
        default: Citrix ADC AMI ID

      pVpcId:
        default: VPC ID
      pSSHCidrIp:
        default: Remote SSH CIDR IP
      pHTTPCidrIp:
        default: Remote HTTP CIDR IP
      pHTTPSCidrIp:
        default: Remote HTTPS CIDR IP
      pKeyName:
        default: Key Pair
      pInstanceCount:
        default: Number of Citrix ADC Instances
      # pIsPublicIPRequired:
      #   default: Do these ADCs be assigned Public IPs?

      pManagementSubnet:
        default: Management Subnet
      pClientSubnet:
        default: Client Subnet
      pServerSubnet:
        default: Server Subnet

      pInstanceType:
        default: Instance Type
      pTenancyType:
        default: Tenancy Type

Conditions:
  UseCitrixADCImageID: !Not
    - !Equals
      - !Ref pCitrixADCImageID
      - ""

Resources:
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable SSH access via port 22, HTTP with port 80 and HTTPS with port 443"
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref pSSHCidrIp
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref pHTTPCidrIp
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref pHTTPSCidrIp
  rInboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt rSecurityGroup.GroupId
      GroupId: !GetAtt rSecurityGroup.GroupId

  rCitrixNodesInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      Path: /
      Policies:
        - PolicyName: CitrixNode
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - "ec2:DescribeAddresses"
                  - "ec2:AssociateAddress"
                  - "ec2:DisassociateAddress"
                  - "ec2:DescribeInstances"
                  - "ec2:DescribeNetworkInterfaces"
                  - "ec2:DetachNetworkInterface"
                  - "ec2:AttachNetworkInterface"
                  - "ec2:StopInstances"
                  - "ec2:StartInstances"
                  - "ec2:RebootInstances"
                  - "autoscaling:*"
                  - "sns:*"
                  - "sqs:*"
                  - "iam:GetRole"
                  - "iam:SimulatePrincipalPolicy"
                Resource: "*"
                Effect: Allow
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
  rCitrixNodesProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref rCitrixNodesInstanceRole

  rLambdaExecutionRole:
    DependsOn:
      - rCitrixNodesInstanceRole
      - rCitrixNodesProfile
      - rSecurityGroup
      - rInboundRule
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: LambdaLog2CloudWatch
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - "logs:CreateLogGroup"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                  - "logs:CreateExportTask"
                  - "logs:DescribeExportTask"
                Resource: "arn:aws:logs:*:*:*"
        - PolicyName: LambdaAllowAllEC2
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Action:
                  - "ec2:*"
                Resource: "*"
                Effect: Allow
              - Action: "iam:PassRole"
                Effect: "Allow"
                Resource: "*"

  rLambdaCreateMultipleBYOLFunction:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: !Join
          - ""
          - - ns-vpx-cft-fn-
            - !Ref "AWS::Region"
        S3Key: lambda-create-multiple-ADCs.zip
      Handler: lambda-create-multiple-ADCs.lambda_handler
      Runtime: python3.6
      Timeout: 900
      Role: !GetAtt rLambdaExecutionRole.Arn
      # VpcConfig:
      # SecurityGroupIds:
      #   - !Ref rSecurityGroup
      # SubnetIds:
      #   - !Ref pManagementSubnet
      #   - !Ref pClientSubnet
      #   - !Ref pServerSubnet
  rLambdaCreateInstance:
    Type: Custom::CreateBYOL
    Properties:
      ServiceToken: !GetAtt rLambdaCreateMultipleBYOLFunction.Arn
      ImageID: !If
        - UseCitrixADCImageID
        - !Ref pCitrixADCImageID
        - !FindInMap
          - AWSAMIRegionMap
          - !Ref AWS::Region
          - CITRIXADC
      SecurityGroup: !Ref rSecurityGroup
      KeyName: !Ref pKeyName
      TenancyType: !Ref pTenancyType
      InstanceType: !Ref pInstanceType
      IAMInstanceProfileARN: !GetAtt rCitrixNodesProfile.Arn
      IAMInstanceProfile: !Ref rCitrixNodesProfile
      MgmtSubnet: !Ref pManagementSubnet
      ClientSubnet: !Ref pClientSubnet
      ServerSubnet: !Ref pServerSubnet
      InstanceCount: !Ref pInstanceCount
      # IsPublicIpReqd: !Ref pIsPublicIPRequired
      IsPublicIpReqd: !!str Yes

Outputs:
  # InstancesIDsCreated:
  #   Description: Instances Created
  #   Value: !GetAtt rLambdaCreateInstance.IntanceIds
  InstanceIDsWithIPs:
    Description: Instances created with their IPs
    Value: !GetAtt rLambdaCreateInstance.InstAndIP

Mappings:
  AWSAMIRegionMap:
    AMI:
      CITRIXADC: Citrix NetScaler and CloudBridge Connector 13.0-52.24-64-63425ded-82f0-4b54-8cdd-6ec8b94bd4f8-ami-05e241fd9b61abb3a.4
    us-gov-west-1:
      CITRIXADC: ami-00d2e361
    us-gov-east-1:
      CITRIXADC: ami-21f11d50
    us-east-2: # US East (Ohio)
      CITRIXADC: ami-0e8e26c508fa94732
    us-east-1: # US East (N. Virginia)
      CITRIXADC: ami-0bb96d1f8f79db909
    us-west-1: # US West (N. California)
      CITRIXADC: ami-0707f52c208d83427
    us-west-2: # US West (Oregon)
      CITRIXADC: ami-0503d15aed657c87d
    ap-east-1: # Asia Pacific (Hong Kong)
      CITRIXADC: ami-0b44e0d299d3b3a33
    ap-south-1: # Asia Pacific (Mumbai)
      CITRIXADC: ami-027978a22dc893058
    ap-northeast-2: # Asia Pacific (Seoul)
      CITRIXADC: ami-0ad520c016e96f260
    ap-southeast-1: # Asia Pacific (Singapore)
      CITRIXADC: ami-0316840d86abe4e5e
    ap-southeast-2: # Asia Pacific (Sydney)
      CITRIXADC: ami-02098e6dfe08d9299
    ap-northeast-1: # Asia Pacific (Tokyo)
      CITRIXADC: ami-0a5d628c2e1ea45e9
    ca-central-1: # Canada (Central)
      CITRIXADC: ami-02cbae7662e592d24
    eu-central-1: # Europe (Frankfurt)
      CITRIXADC: ami-05d81856537a0cfc2
    eu-west-1: # Europe (Ireland)
      CITRIXADC: ami-023da45cff4446484
    eu-west-2: # Europe (London)
      CITRIXADC: ami-037b51b95111f4231
    eu-west-3: # Europe (Paris)
      CITRIXADC: ami-0bd4c025bd6afab4a
    eu-north-1: # Europe (Stockholm)
      CITRIXADC: ami-01672d9e4fd60f85d
    sa-east-1: # South America (São Paulo)
      CITRIXADC: ami-0c66fc6fff94c64b9
